@@ -132,6 +132,9 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkTreeView.html">GtkTreeView</a>
 <tr><td class="wiki"> selected-row </td><td class="wiki"> The row to select on initialisation and refresh </td><td class="wiki"> An integer &gt;= <code>0</code> </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> column-header-active </td><td class="wiki"> Active state of column header(s) </td><td class="wiki"> <i>state0</i> <code>|</code> <i>state1</i> <code>|</code> ... </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> column-visible </td><td class="wiki"> Visible state of column(s) </td><td class="wiki"> <i>state0</i> <code>|</code> <i>state1</i> <code>|</code> ... </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> auto-sort </td><td class="wiki"> Automatically sort after loading data </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> sort-column </td><td class="wiki"> The initial sort column when auto-sorting </td><td class="wiki"> An integer &gt;= <code>0</code> </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> sort-type </td><td class="wiki"> The initial sort direction when auto-sorting </td><td class="wiki"> <code>0</code>, <code>1</code> (ascending, descending) </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> column-type </td><td class="wiki"> Data type of column(s) </td><td class="wiki"> <i>type0</i> <code>|</code> <i>type1</i> <code>|</code> ... (<code>string</code>, <code>int64</code>, <code>uint64</code> or <code>double</code>) </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> column-sort-function </td><td class="wiki"> The sorting algorithm for each column </td><td class="wiki"> <i>func0</i> <code>|</code> <i>func1</i> <code>|</code> ... (<code>0</code> default, <code>1</code> strnatcmp or <code>2</code> strcasenatcmp) </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> selection-mode </td><td class="wiki"> Selection method </td><td class="wiki"> <code>0</code>, <code>1</code>, <code>2</code>, <code>3</code> (none, single, browse, multiple) </td><td class="wiki"> 0.7.21 </td></tr>
